--- a/index.html
+++ b/index.html
@@ -3,15 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>대학헌장</title>
     <style>
         .bluetext {  /* 클래스 선택자 */       
             color: rgb(96, 96, 255); /* 글자색 */
         }
+        .left-img {
+            float: left;
+            margin-left: 5px;
+            width: auto;
+            height: 105px;
+        }
     </style>
 </head>
 <body>
+    <img src="images/공주대.png" class="left-img"><br>
     <h2>대학헌장</h2>
+    <br>
+    <br>
     <textarea cols="80" rows="3">
         진리는 학문의 궁극적인 목표이고,
         가치는 학문의 객관적 당위성을 평가하는 참된 기준이며,
